chore: Fix 2.x migration guide link and remove obsolete blog post

--- a/src/main/site/_posts/2021-08-16-citrus-3.0.md
+++ b/src/main/site/_posts/2021-08-16-citrus-3.0.md
@@ -17,7 +17,7 @@ This summary is here to share our strategy, ideas and all major changes that are
 
 Citrus 3.0 is a major release, and we want to take that as an opportunity to follow up with some improvements and refactoring that we are eager to do for quite some time. 
 That being said we try to comply with everybody's need to migrate from older versions. 
-People coming from Citrus 2.x should have a look at the [2.x migration guide](https://github.com/citrusframework/citrus/wiki/Migration-from-Citrus-2.x). 
+People coming from Citrus 2.x should have a look at the [2.x migration guide](https://github.com/citrusframework/citrus/wiki/Citrus-2.x-migration-guide). 
 In addition to that we take extra care to keep breaking changes on a low-level.
 
 Here are the main objectives we have in Citrus 3.0
