--- a/src/main/site/_posts/2023-05-15-release-4.0.0-M1.md
+++ b/src/main/site/_posts/2023-05-15-release-4.0.0-M1.md
@@ -1,12 +1,13 @@
 ---
 layout: post
-title: Release 4.0.0-M1
+title: 1st milestone of Citrus 4.0
+short-title: Citrus 4.0.0-M1
 author: Christoph Deppisch
-categories: [release]
-version: 4.0.0-M1
+github: christophd
+categories: [blog]
 ---
 
-The community is proud to announce the availability of the 1st milestone towards Citrus 4.0.
+The community is proud to announce the availability of the 1st milestone towards Citrus 4 (4.0.0-M1).
 The need for a new major release of Citrus is mainly driven by the industry migrating from `javax` to `jakarta` APIs. 
 Citrus is keen to keep up with popular runtimes such as Spring Boot and Quarkus.
 The proper alignment with those runtimes and the evolving of Java's ecosystem in general is a key driver for Citrus 4.0.
@@ -16,8 +17,8 @@ such as Spring 6.0, Jakarta EE and Apache Camel 4.0.
 
 ## Java 17
 
-Citrus 4.0 is compiled with Java 17 (was Java 11 for Citrus 3.x). 
-This means the minimum version to run Citrus 4.0 is also Java 17. 
+Citrus 4 is compiled with Java 17 (was Java 11 for Citrus 3.x). 
+This means the minimum version to run Citrus 4 is also Java 17. 
 Of course this also means that you are able to use the full greatness of evolving Java features such as records, multiline text blocks and so many more.  
 
 ## New groupId org.citrusframework
