chore: Remove obsolete link to forum

--- a/src/main/site/_posts/2023-05-15-release-4.0.0-M1.md
+++ b/src/main/site/_posts/2023-05-15-release-4.0.0-M1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1st milestone of Citrus 4.0
+title: Citrus 4.0.0-M1
 short-title: Citrus 4.0.0-M1
 author: Christoph Deppisch
 github: christophd
