--- a/src/main/site/_posts/2023-05-15-release-4.0.0-M1.md
+++ b/src/main/site/_posts/2023-05-15-release-4.0.0-M1.md
@@ -7,13 +7,12 @@ github: christophd
 categories: [blog]
 ---
 
-The community is proud to announce the availability of the 1st milestone towards Citrus 4 (4.0.0-M1).
+The community is proud to announce the availability of the 1st release milestone towards Citrus 4 (4.0.0-M1).
 The need for a new major release of Citrus is mainly driven by the industry migrating from `javax` to `jakarta` APIs. 
 Citrus is keen to keep up with popular runtimes such as Spring Boot and Quarkus.
 The proper alignment with those runtimes and the evolving of Java's ecosystem in general is a key driver for Citrus 4.0.
 
-The next major release of Citrus uses Java 17 and aligns with some major dependency version updates 
-such as Spring 6.0, Jakarta EE and Apache Camel 4.0.
+The next major release of Citrus uses Java 17 and aligns with major dependency version updates such as Spring 6.0, Jakarta EE and Apache Camel 4.0.
 
 ## Java 17
 
@@ -23,16 +22,27 @@ Of course this also means that you are able to use the full greatness of evolvin
 
 ## New groupId org.citrusframework
 
-Citrus is an Open Source project and tries to complement with the idea of open code and community contributions. 
+Citrus is an Open Source project and promotes the idea of open code and community contributions. 
 The company [ConSol Software GmbH](https://www.consol.com/) and its employees have been a driving force in creating and maintaining Citrus since the very beginning of the project.
-And still ConSol plays a significant role in the success of Citrus by adapting and promoting the project in so many ways.
+Still ConSol plays a significant role in the success of Citrus by adapting and promoting the project in so many ways.
 However, the list of new contributors emerges and Citrus benefits from many community contributions these days.
 
 For the sake of strengthening the Open Source idea we decided to move the Citrus groupId from `com.consol.citrus` to a more generic `org.citrusframework` from Citrus 4.0 onwards.
 
 In case you update from earlier Citrus versions to Citrus 4.0 this means you need to adjust this groupId when referencing Citrus modules in Maven or Gradle.
-As the groupId also represents the basic Java package used in Citrus you will likely also have to adjust your tests written on top of Citrus when updating. 
-Please do not be afraid as it should be nothing more than a search and replace in your project codebase on this Java base package wherever it may be referenced.
+
+```xml
+<dependency>
+    <groupId>org.citrusframework</groupId>
+    <artifactId>citrus-bom</artifactId>
+    <version>4.0.0-M1</version>
+    <type>pom</type>
+    <scope>import</scope>
+</dependency>
+```
+
+As the groupId also represents the basic Java package used in Citrus you will likely also have to adjust your tests written on top of Citrus when doing an update. 
+Please do not worry as it should be nothing more than a search-and-replace operation in your project codebase on this Java base package wherever it may be referenced.
 
 ## Major version updates and Jakarta EE
 
@@ -94,4 +104,5 @@ Please have a look at the Citrus API JavaDocs and documentation in order to find
 
 ## Provide feedback
 
-Please adapt to using Citrus 4.0.0-M1 as soon as possible and give feedback to the maintainers of the project.
+Please adapt to using Citrus 4.0.0-M1 as soon as possible and give us feedback what is working and what may need more attention.
+We would love to hear from you how you like Citrus 4!
