chore: Update blog post

--- a/src/main/site/_posts/2023-10-25-release-4.0.0.md
+++ b/src/main/site/_posts/2023-10-25-release-4.0.0.md
@@ -32,7 +32,7 @@ We recommend to use the following setup:
 
 * Java 17+
 * Maven 3.9+
-* Runtime, one of
+* As runtime one of
     * JUnit Jupiter 5.10+
     * TestNG 7.8+
     * Cucumber 7.14+
@@ -70,78 +70,65 @@ Please do not worry as it should be nothing more than a search-and-replace opera
 
 ## Dependency update
 
-Citrus depends on many fantastic libraries and projects. With the move to the Jakarta API many of them did have major version updates in 2023. Citrus now aligns with the latest and greatest versions these libraries.
+Citrus depends on many fantastic libraries and projects. With the move to the Jakarta API many of them hava had major version releases in 2023. Citrus now aligns with the latest and greatest versions of these libraries.
 
 The new library versions used in Citrus 4.0 are:
 
-* JUnit Jupiter 5.10.0
-* TestNG 7.8.0
-* Cucumber 7.14.0
-* Quarkus Test 3.4.2
-* Apache Camel 4.1.0
-* ActiveMQ Artemis 2.31.0
-* ActiveMQ 5.18.2
-* Jetty 11.0.17
-* HttpClient 5.2.1
-* Cucumber 7.14.0
-* Knative Client 6.9.0
-* Kubernetes Client 6.9.0
-* Netty 4.1.100.Final
-* SLF4J 2.0.9
-* SnakeYAML 2.2
-* Spring Framework 6.0.13
-* Spring WS 4.0.7
-* Spring Integration 6.1.4
-* Testcontainers 1.19.1
-* PostrgeSQL 42.6.0
-* GreenMail 2.0.0
-* Jakarta JMS API 3.1.0
-* Jakarta Validation 3.0.2
-* Jakarta Websocket API 2.1.1
-* Jakarta Servlet API 6.0.0
-* Saaj 3.0.3
-* JaxB 4.0.3
-* Kafka 3.6.0
-* SLF4J 2.0.9
-* Snakeyaml 2.2
+| Library               | Version       | Library               | Version |
+|:----------------------|:--------------|:----------------------|:--------|
+| JUnit Jupiter         | 5.10.0        | TestNG                | 7.8.0   |
+| Cucumber              | 7.14.0        | Quarkus Test          | 3.4.2   |
+| Apache Camel          | 4.1.0         | ActiveMQ Artemis      | 2.31.0  |
+| ActiveMQ              | 5.18.2        | Jetty                 | 11.0.17 |
+| HttpClient            | 5.2.1         | Cucumber              | 7.14.0  |
+| Knative Client        | 6.9.0         | Kubernetes Client     | 6.9.0   |
+| Netty                 | 4.1.100.Final | SLF4J                 | 2.0.9   |
+| SnakeYAML             | 2.2           | Spring Framework      | 6.0.13  |
+| Spring WS             | 4.0.7         | Spring Integration    | 6.1.4   |
+| Testcontainers        | 1.19.1        | PostrgeSQL            | 42.6.0  |
+| GreenMail             | 2.0.0         | Jakarta JMS API       | 3.1.0   |
+| Jakarta Validation    | 3.0.2         | Jakarta Websocket API | 2.1.1   |
+| Jakarta Servlet API   | 6.0.0         | Saaj                  | 3.0.3   |
+| JaxB                  | 4.0.3         | Kafka                 | 3.6.0   |
+| SLF4J                 | 2.0.9         | Snakeyaml             | 2.2     |
 
 ## Move to Jakarta API
 
-The whole industry faced a quite important switch from `javax.*` to `jakarta.*` APIs. The migration often is not very easy and the Citrus team is happy to have tackled this move with the new major version update.
+Many libraries accomplish the switch from `javax.*` to `jakarta.*` APIs. The migration itself can be a tough task and the Citrus team is happy to have tackled this move with the new major version update.
 
-For you as a user this move may not cause any trouble because the Citrus dependencies are all using the new Jakarta APIs already. In case you are using Citrus in combination with an older servlet container or with a library that still uses the `javax` APIs it may be time to also update these dependencies in your project.
+For you as a user this move may not cause much trouble because the Citrus dependencies are all using the new Jakarta APIs already. In case you are using Citrus in combination with an older servlet container or with a library that still uses the `javax` APIs it may be time to also update these dependencies in your project.
 
 ## Polyglot test runner support
 
-Citrus provides many ways to write test cases. The most popular ones are using the Java DSL and the Spring bean XML syntax. In addition to that you can now choose to write Citrus tests in pure XML, YAML or Groovy. All of them are equally in its feature set and you can adapt the test language to your individual requirements (not everybody is a Java expert and this is fine).
+Citrus provides many ways to write test cases. The most popular ones are using the Java DSL and the Spring bean XML syntax. In addition to that you can now choose to write Citrus tests in pure XML, YAML or Groovy. All of them share the same feature set, so you can adapt the test language to your individual requirements (not everybody is a Java expert and this is fine).
 
 ## Removed modules
 
-Sometimes it is the time to say goodbye. A new major version is always a good point to get rid of obsolete and outdated things. Some Citrus modules are end of life and are discontinued some modules will be just moved to a separate code repository.
+Sometimes it is the time to say goodbye and a new major version is always a good point to get rid of obsolete and outdated things. Some Citrus modules are declared "end of life" and are being discontinued, some modules will just be moved to a separate code repository.
 
 These modules have been removed from the main Citrus project.
 
-- citrus-java-dsl (deprecated Java domain specific language that was based on the TestDesigner interface)
-- citrus-arquillian (Arquillian integration to run Citrus as part of the Arquillian framework)
-- citrus-jdbc (JDBC server implementation that is able to simulate any JDBC driver and database)
-- citrus-remote (Run Citrus via remote Http tunnel on a foreign server)
+- **citrus-java-dsl** deprecated Java domain specific language that was based on the TestDesigner interface
+- **citrus-arquillian** Arquillian integration to run Citrus as part of the Arquillian framework
+- **citrus-jdbc** JDBC server implementation that is able to simulate any JDBC driver and database
+- **citrus-remote** Run Citrus via remote Http tunnel on a foreign server
 
 Removing the modules does not mean that these bits are completely gone forever though. Some modules have just been moved out of the Citrus project into new separate code repositories. This is mainly because these modules do have experimental status and updating to Jakarta EE and Java 17 has not been possible at the moment.
 
 The experimental modules moved to separate repositories are:
 
-* citrus-remote lives on in [https://github.com/citrusframework/citrus-remote](https://github.com/citrusframework/citrus-remote)
-* citrus-jdbc endpoint module has been moved to [https://github.com/citrusframework/citrus-db](https://github.com/citrusframework/citrus-db)
+* _citrus-remote_ lives on in [https://github.com/citrusframework/citrus-remote](https://github.com/citrusframework/citrus-remote)
+* _citrus-jdbc_ endpoint module has been moved to [https://github.com/citrusframework/citrus-db](https://github.com/citrusframework/citrus-db)
 
-The code and functionality of those modules stays the same. Also, the code has already received updates on the major releases such as Spring 6.0.
+The code and functionality of those modules stays the same. Also, the code has already received updates on the major releases such as Spring 6.
 
-It is up to the community though to decide about the future maintenance and release cadence of these modules as those will not be released automatically with Citrus main project anymore.
+It is up to the community though to decide about the future maintenance and release cadence as these modules will not be released automatically with Citrus main project anymore.
 
 ## Provide feedback and help
 
-Please adapt to using Citrus 4.0.0 as soon as possible and give us feedback what is working and what may need more attention.
+Please adapt to using Citrus 4 as soon as possible and give us feedback what is working and what may need more attention.
 We would love to hear from you how you like Citrus 4! Also the documentation has not been fully updated yet. Any help is much appreciated! So in case you have something to improve of fix just open a PR we are more than happy to receive your contributions!
 
 ## Thank you!
 
-Let's use this opportunity to thank everybody involved in making this Citrus 4 release happen. The Citrus community did a tremendous job to brings this all together! The Citrus team is very proud to have a new version of Citrus available that after 16+ years of development still works and is up-to-date with the latest and greatest Software libraries out there! THANK YOU!
+Let's use this opportunity to thank everybody involved in making this Citrus 4 release happen. The Citrus community did a tremendous job to brings this all together! The Citrus team is very proud to have a new version of Citrus available that after 16+ years of development still is up-to-date with the latest and greatest software libraries out there! THANK YOU!
