chore: Update blog post with Quarkus runtime news

--- a/src/main/site/_posts/2023-10-25-release-4.0.0.md
+++ b/src/main/site/_posts/2023-10-25-release-4.0.0.md
@@ -22,6 +22,7 @@ Here are the main objectives we have with Citrus 4.0
 * Update dependencies to latest major versions
 * Move from `javax.*` to `jakarta.*`
 * Polyglot test runner support (XML, Groovy and YAML)
+* QuarkusTest runtime support
 * Remove deprecated modules and code
 
 ## Java 17
@@ -41,7 +42,7 @@ We recommend to use the following setup:
 
 Of course this also means that you are able to use the full greatness of evolving Java features such as records, multiline text blocks and so many more.
 
-## New Maven groupId "org.citrusframework"
+## Maven groupId "org.citrusframework"
 
 Citrus is an Open Source project and promotes the idea of open code and community contributions. For over a decade Citrus has been using the groupId `com.consol.citrus` because the company [ConSol Software GmbH](https://www.consol.com/) and its employees have been a driving force in creating and maintaining the project since the very beginning.
 
@@ -101,6 +102,14 @@ For you as a user this move may not cause much trouble because the Citrus depend
 ## Polyglot test runner support
 
 Citrus provides many ways to write test cases. The most popular ones are using the Java DSL and the Spring bean XML syntax. In addition to that you can now choose to write Citrus tests in pure XML, YAML or Groovy. All of them share the same feature set, so you can adapt the test language to your individual requirements (not everybody is a Java expert and this is fine).
+
+## QuarkusTest runtime
+
+Quarkus is an emerging enterprise Java stack that is keen to bring Java as a leading platform into the cloud-native application future. With Citrus 4 you can directly combine the test framework with the test capabilities of Quarkus. The Quarkus test framework provides awesome features such as dev services, auto configuration and first class integration with Testcontainers.
+
+Citrus now provides a Quarkus extension that is able to hook into the QuarkusTest runtime so you can inject Citrus capabilities into your Quarkus test.
+
+Read more about it in [docs/reference/index.html#runtime-quarkus](https://citrusframework.org/citrus/reference/html/index.html#runtime-quarkus).
 
 ## Removed modules
 
