--- a/src/main/site/_posts/2023-10-25-release-4.0.0.md
+++ b/src/main/site/_posts/2023-10-25-release-4.0.0.md
@@ -51,7 +51,7 @@ However, the list of new contributors emerges and Citrus benefits from many comm
 
 For the sake of strengthening the Open Source idea we decided to move the Citrus groupId from `com.consol.citrus` to a more generic `org.citrusframework` from Citrus 4.0 onwards.
 
-With the move to `org.citrusframework` we decided to happily comply with the Open Source nature of the project because nowadays the project receives valuable contributions from many different companies.
+With the move to `org.citrusframework` we decided to happily comply with the Open Source nature of the project because nowadays, the project receives valuable contributions from many companies.
 
 Please update the groupId in your Maven `pom.xml` accordingly when updating to Citrus 4.0.
 
@@ -59,7 +59,7 @@ Please update the groupId in your Maven `pom.xml` accordingly when updating to C
 <dependency>
     <groupId>org.citrusframework</groupId>
     <artifactId>citrus-bom</artifactId>
-    <version>4.0.0</version>
+    <version>${citrus.version}</version>
     <type>pom</type>
     <scope>import</scope>
 </dependency>
